feat: enhance PromptCategory tree building with sorting and improved child assignment